<resources>
    <string name="app_name">MyBusiness</string>
    <string name="titulo_tela_menu">Menu</string>
    <string name="titulo_tela_menu_produto">Menu de Produtos</string>
    <string name="titulo_tela_menu_cliente">Menu de Clientes</string>
    <string name="titulo_tela_menu_venda">Menu de Vendas</string>
    <string name="titulo_tela_menu_usuario">Menu de Usuários</string>
    <string name="titulo_tela_menu_relatorio">Menu de Relatórios</string>

    <string name="titulo_tela_cadastrar_produto">Cadastrar Produto</string>
    <string name="titulo_tela_editar_produto">Editar Produto</string>
    <string name="titulo_tela_carrinho_compra">Carrinho de Compras</string>
    <string name="titulo_tela_meu_carrinho">Meu carrinho</string>
    <string name="titulo_tela_detalhes_produto">Detalhes do Produto</string>
    <string name="titulo_tela_cadastrar_cliente">Cadastrar Cliente</string>
    <string name="titulo_tela_realizar_venda">Realizar Venda</string>
    <string name="titulo_tela_cadastrar_usuario">Cadastrar Usuário</string>
    <string name="titulo_tela_relatorio_vendas">Relatório de Vendas</string>

    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="lembrar">Lembrar-se</string>

    <string name="produto">Produto</string>
    <string name="cliente">Cliente</string>
    <string name="carrinho">Carrinho</string>
    <string name="usuarios">Usuários</string>
    <string name="relatorio">Relatório</string>
    <string name="formulario_nome">Nome do Produto</string>
    <string name="formulario_quantidade">Quantidade</string>
    <string name="formulario_data">Data da Entrada</string>
    <string name="formulario_preco_compra">Preço de Compra</string>
    <string name="formulario_preco_venda">Preço de Venda</string>
    <string name="formulario_url_principal">Link da Imagem Principal</string>
    <string name="formulario_url_secundaria">Link da Imagem Secundária</string>
    <string name="formulario_produto_ativo">Ativo</string>
    <string name="formulario_botao_salvar">Salvar</string>

    <string name="nova_venda">Nova Venda</string>
    <string name="Venda">Venda</string>


    <string name="voltar">Voltar</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="numero">Nº</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="cpf">CPF</string>
    <string name="nome">Nome</string>
    <string name="formulario_venda_produto">Produto</string>
    <string name="formulario_venda_adicionar">+</string>
    <string name="formulario_quantidade_compra">1</string>
    <string name="formulario_hint_valor_produto">0,00</string>
    <string name="formulario_adicionar_produto">Adicionar</string>
    <string name="formulario_valor_produto">Valor</string>
    <string name="formulario_valor_venda">Valor Venda</string>
    <string name="formulario_descricao">Descrição</string>
    <string name="formulario_salvar_venda">Finalizar Venda</string>



    <string name="vendas_anual">Anual</string>
    <string name="vendas_mensal">Mensal</string>
    <string name="vendas_semanal">Semanal</string>
    <string name="vendas_diario">Diário</string>
    <string name="id">ID</string>

    <string name="botao_login">Login</string>
    <string name="buscar">Buscar</string>
    <string name="salvar">Salvar</string>
    <string name="alterar">Alterar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="botao_comprar">Comprar</string>

</resources>
