<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem_tela_menu"
    tools:context=".activities.ActivityMenuRelatorio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/buttonRelatorioVendasDiario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/color_menu"
            android:textStyle="bold"
            android:text="@string/vendas_diario" />

        <Button
            android:id="@+id/buttonRelatorioVendasSemanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/color_menu"
            android:textStyle="bold"
            android:text="@string/vendas_semanal" />


        <Button
            android:id="@+id/buttonRelatorioVendasMensal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/color_menu"
            android:textStyle="bold"
            android:text="@string/vendas_mensal" />

        <Button
            android:id="@+id/buttonRelatorioVendasAnual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/color_menu"
            android:textStyle="bold"
            android:text="@string/vendas_anual" />



    </LinearLayout>

</LinearLayout>